--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,3 @@
-@import "../sass/utils/basic";
-@import "../sass/utils/variables";
-// header
-@import "../sass/components/header_footer/header";
-// main
-@import "../sass/components/main/hero";
-@import "../sass/components/main/description";
-@import "../sass/components/main/about-me";
-@import "../sass/components/main/our-team";
-@import "../sass/components/main/clients";
-// footer
-@import "../sass/components/header_footer/footer";
-// portfolio
-@import "../sass/components/portfolio/portfolio";
-// modal
-@import "../sass/components/main/modal/modal";
-@import "../sass/components/main/modal/forms";
+@import ".//utils/basic";
+@import ".//utils/variables";
+@import ".//components/header_footer/header";
