--- a/sass/components/header_footer/_header.scss
+++ b/sass/components/header_footer/_header.scss
@@ -3,23 +3,32 @@
   border: 1px solid #ececec;
 }
 
-.header__container {
-  display: flex;
-  align-items: center;
-}
-
 .navigation__list {
-  display: flex;
   letter-spacing: 0.02em;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+.header {
+  border: 1px solid #ececec;
 }
 
-.navigation__item + .navigation__item {
-  margin-left: 50px;
+.header__container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .navigation__item + .navigation__item {
+    margin-left: 50px;
+  }
 }
 
-.contacts__item + .contacts__item {
-  margin-left: 50px;
-}
+// .navigation__list {
+//   display: flex;
+//   letter-spacing: 0.02em;
+// }
 
 .container__link {
   margin-right: 91px;
@@ -29,6 +38,7 @@
   font-size: 26px;
   line-height: 1.19;
 }
+
 .container-logo {
   color: var(--accent-color);
 }
@@ -42,50 +52,65 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-
   transition: var(--animation);
+}
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
+.navigation__link:hover,
+.navigation__link:focus {
+  color: var(--accent-color);
+}
 
-  &--current::after {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    content: "";
-    display: inline-block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-  }
+.navigation__link--current::after {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 .contacts {
-  display: flex;
   margin-left: auto;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__item + .contacts__item {
+    margin-left: 50px;
+  }
 }
 
 .contacts__link {
-  display: flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: var(--text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
   transition: var(--animation);
+  @media screen and (min: width 768px) {
+    :not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
 
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
+
+.contacts__link:hover,
+.contacts__link:focus {
+  color: var(--accent-color);
+}
+
 .contacts__icon {
   margin-right: 10px;
   fill: currentColor;
@@ -95,6 +120,7 @@
   width: 16px;
   height: 12px;
 }
+
 .contacts__icon--tel {
   width: 10px;
   height: 16px;
