--- a/sass/utils/_basic.scss
+++ b/sass/utils/_basic.scss
@@ -26,9 +26,19 @@ a {
   text-decoration: none;
 }
 .container {
+  width: 100%;
+  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
