--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -26,3 +26,9 @@
   --shdow-animation: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --transform-animation: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+// Breakpoints
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1140px;
