--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
 @import ".//utils/basic";
 @import ".//utils/variables";
 @import ".//components/header_footer/header";
+@import ".//components/main/hero";
+@import ".//components/main/description";
+@import ".//components/main/about-me";
+@import ".//components/main/our-team";
+@import ".//components/main/clients";
