--- a/sass/components/main/_description.scss
+++ b/sass/components/main/_description.scss
@@ -1,30 +1,67 @@
 /* DESCRIPTION SECTION */
 .section {
+  @media screen and (max-width: 1200px) {
+    padding-bottom: 60px;
+    padding-top: 60px;
+  }
   padding-top: 94px;
   padding-bottom: 94px;
 }
 .describe {
-  display: flex;
-  justify-content: center;
+  @media screen and (min-width: 480px) {
+    display: block;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+  }
 }
-.describe__item + .describe__item {
-  margin-left: 30px;
+.describe__item {
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    margin: 15px;
+    width: calc((100% - 2 * 30px) / 2);
+  }
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .describe__item + .describe__item {
+    margin-left: 30px;
+  }
 }
 
 .thumb {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: var(--background-color);
   border-radius: 4px;
   height: 120px;
-  width: 270px;
-  background-color: var(--background-color);
+  padding: 25px 0px;
+  text-align: center;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 480px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .thumb__icon {
   height: 70px;
   width: 70px;
 }
+
 .thumb__title {
   margin-top: 0px;
   margin-bottom: 10px;
@@ -32,6 +69,9 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .thumb__text {
   margin-top: 0px;
