--- a/sass/components/main/_our-team.scss
+++ b/sass/components/main/_our-team.scss
@@ -1,20 +1,44 @@
 /* OUR TEAM SECTION */
 .section--bgrey {
+  @media screen and (max-width: 1200px) {
+    padding-top: 60px;
+  }
   background-color: var(--background-color);
 }
 .card {
   display: flex;
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 .card__item {
   text-align: center;
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
   background-color: var(--main-title);
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    margin: 15px;
+    flex-basis: calc((100% - 4 * 15px) / 2);
+  }
 }
-
-.card__item + .card__item {
-  margin-left: 30px;
+.card__item img {
+  margin: 0px;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .card__item + .card__item {
+    margin-left: 30px;
+  }
 }
 .team-card {
   padding-top: 30px;
