--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@
 @import ".//components/main/about-me";
 @import ".//components/main/our-team";
 @import ".//components/main/clients";
+@import ".//components/header_footer/footer";
