--- a/css/main.css
+++ b/css/main.css
@@ -348,7 +348,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .describe {
     display: flex;
     flex-wrap: wrap;
@@ -363,7 +363,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .describe__item {
     margin: 15px;
     width: calc((100% - 2 * 30px) / 2);
@@ -493,12 +493,6 @@ a {
   background-color: var(--background-color);
 }
 
-@media screen and (max-width: 1200px) {
-  .section--bgrey {
-    padding-top: 60px;
-  }
-}
-
 .card {
   display: flex;
 }
@@ -509,7 +503,7 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .card {
     flex-wrap: wrap;
     margin: -15px;
@@ -529,15 +523,14 @@ a {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .card__item {
     margin: 15px;
     flex-basis: calc((100% - 4 * 15px) / 2);
   }
 }
 
-.card__item img {
-  margin: 0px;
+.card__image {
   width: 100%;
 }
 
@@ -610,24 +603,55 @@ a {
   padding-left: 0px;
 }
 
-.clients__item + .clients__item {
-  margin-left: 30px;
+@media screen and (max-width: 1199px) {
+  .clients {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+.clients__item {
+  margin: 15px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .clients__item {
+    width: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .clients__item {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item + .clients__item {
+    margin-left: 30px;
+  }
 }
 
 .clients__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  width: 100%;
   color: var(--icon-color);
   transition: var(--animation);
 }
 
 .clients__link:hover, .clients__link:focus {
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 
 .clients__logo {
@@ -662,5 +686,237 @@ a {
 .clients__logo--sixth {
   width: 93px;
   height: 44px;
+}
+
+/* FOOTER */
+.footer {
+  background-color: var(--footer-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer__container {
+  display: flex;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .footer__container {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .footer-wrap {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-wrap {
+    margin-left: 76px;
+  }
+}
+
+.footer-wrap__link {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: var(--main-title);
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+}
+
+.footer-wrap__logo {
+  color: var(--accent-color);
+}
+
+.footer-wrap__address {
+  color: var(--main-title);
+  margin-bottom: 9px;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.7;
+}
+
+.footer-list {
+  margin: 0px;
+  padding-left: 0px;
+}
+
+.footer-list__item:first-child {
+  display: inline-block;
+  margin-bottom: 9px;
+}
+
+.footer-list__link {
+  color: var(--footer-contacts);
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .footer-box {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-box {
+    margin-left: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    margin-left: 70px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container--group {
+    display: flex;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container--group {
+    display: flex;
+  }
+}
+
+.footer-box__title {
+  margin-top: 0px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #ffff;
+  font-size: 14px;
+  line-height: 1.14;
+}
+
+.box-list {
+  display: flex;
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .box-list {
+    justify-content: center;
+  }
+}
+
+.box-list__item + .box-list__item {
+  margin-left: 10px;
+}
+
+.box-list__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  background-color: var(--box-list);
+  color: #ffff;
+  border-radius: 50px;
+  transition: var(--animation);
+}
+
+.box-list__link:hover, .box-list__link:focus {
+  color: #ffff;
+  background-color: var(--accent-color);
+}
+
+.box-list__icon {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .footer-form {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    margin-left: 93px;
+  }
+}
+
+.footer-form__title {
+  margin-top: 0px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #ffff;
+  font-size: 14px;
+  line-height: 1.14;
+}
+
+.footer-form_mail {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form_mail {
+    display: flex;
+  }
+}
+
+.footer-form__input {
+  color: #ffff;
+  width: 358px;
+  padding: 15px 16px 15px 16px;
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-form__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0px;
+  margin-left: 12px;
+  padding: 10px 28px 10px 28px;
+  cursor: pointer;
+  font-weight: bold;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: #ffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .footer-form__button {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.footer-form__icon {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
 }
 /*# sourceMappingURL=main.css.map */
