--- a/sass/components/main/_clients.scss
+++ b/sass/components/main/_clients.scss
@@ -5,26 +5,44 @@
   margin-top: 0px;
   margin-bottom: 0px;
   padding-left: 0px;
+  @media screen and (max-width: 1199px) {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+.clients__item {
+  margin: 15px;
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: calc((100% - 2 * 30px) / 2);
+  }
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    width: calc((100% - 3 * 30px) / 3);
+  }
 }
 
-.clients__item + .clients__item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .clients__item + .clients__item {
+    margin-left: 30px;
+  }
 }
 .clients__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-
+  width: 100%;
   color: var(--icon-color);
   transition: var(--animation);
 
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
   }
 }
 
