--- a/sass/components/header_footer/_footer.scss
+++ b/sass/components/header_footer/_footer.scss
@@ -146,6 +146,8 @@
   line-height: 1.14;
 }
 .footer-form_mail {
+  display: block;
+  @media screen and (min-width: 1200px) {
     display: flex;
   }
 }
